[package]
name = "signal-filters"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-filters"
description = "Filters library, including biquad, moving average, low-pass, and notch filters."
keywords =  ["filter", "biquad", "signal-processing", "low-pass", "notch-filter"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
]

[features]
default = ["libm"]
#default = ["libm", "simd",]
#default = ["libm", "no_align"]
std = ["vqm/std"]
no_align = ["vqm/no_align"]
simd = ["vqm/simd"]
libm = ["num-traits/libm", "vqm/libm"]

# used by RP2040
[target.thumbv6m-none-eabi]
rustflags = ["-C", "target-cpu=cortex-m0plus"]

# used by RP2350
[target.thumbv8m.main-none-eabihf] # hf = Hard Float
rustflags = ["-C", "target-cpu=cortex-m33"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[build-dependencies]
rustc_version = "0.4.1"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
#vqm = { version = "0.1.0" }
vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vector-quaternion-matrix" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = { version = "0.10.1" }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "filter_bench"
harness = false
