[package]
name = "signal-filters"
version = "0.1.6"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-filters"
description = "Filters library, including biquad, moving average, low-pass, and notch filters."
keywords =  ["filter", "biquad", "signal-processing", "low-pass", "notch-filter"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = ["libm"]
#default = ["libm", "serde"]
#default = ["std", "serde"]
#default = ["libm", "simd",]
#default = ["libm", "no_align"]
std = ["num-traits/std", "vqm/std"]
libm = ["dep:libm", "num-traits/libm", "vqm/libm"]
serde = ["dep:serde", "postcard", "vqm/serde"]
no_align = ["vqm/no_align"]
simd = ["vqm/simd"]

[dependencies]
# Set default-features = false to prevent host target leakage
libm = { version = "0.2.16", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"], optional = true }
num-traits = { version = "0.2.19", default-features = false }
vqm = { version = "0.1.10" }
#vqm = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
#vqm = { path = "../vqm"  }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = { version = "0.10.1" }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "filter_bench"
harness = false
